--- a/IOTAmHackCore/IOTAmHackCore.csproj
+++ b/IOTAmHackCore/IOTAmHackCore.csproj
@@ -3,14 +3,26 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="SmartDoorIOTPython\**" />
+    <Content Remove="SmartDoorIOTPython\**" />
+    <EmbeddedResource Remove="SmartDoorIOTPython\**" />
+    <None Remove="SmartDoorIOTPython\**" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Remove="Views\Shared\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.Graph" Version="1.10.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="ActivityImage.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
